# ComicDownloader

./: ComicDownloader  LICENSE  README.md  pyproject.toml  requirements.txt
src/: ComicDownloader.py
src/comicdownloader/: __init__.py
